add newsletter router
