# backend/controllers/profile/settings/settings.js
@@ -6,7 +6,11 @@ const bcrypt = require("bcrypt");
 const crypto = require("crypto");
 
 const { sendEmail } = require("../../../servises/emailServise/emailServise");
-const { getActivateNewslatter } = require("../../../utils/emailTemplates");
+const {
+  getActivateNewslatter,
+  getSubscribNewsletter,
+} = require("../../../utils/emailTemplates");
+const { Newsletter } = require("../../../models/newsletter");
 const { BASE_URL } = process.env;
 
 const getProfile = async (req, res) => {
@@ -18,7 +22,7 @@ const getProfile = async (req, res) => {
   }
   const data = await Profile.findOne({ owner: id }).populate(
     "owner",
-    "name surname subscription birthDay phone email"
+    "name surname bookClub birthDay phone email"
   );
   const { owner, newsletter } = data;
   res.status(200).json({ owner, newsletter });
@@ -74,7 +78,7 @@ const editProfile = async (req, res) => {
   });
   const data = await Profile.findOne({ owner: id }).populate(
     "owner",
-    "name surname subscription birthDay phone email "
+    "name surname bookClub birthDay phone email "
   );
   const { owner, newsletter } = data;
   res.status(200).json({ owner, newsletter });
@@ -117,9 +121,10 @@ const activateNewsleter = async (req, res) => {
   }
   if (profile.newsletter === false) {
     profile.newsletter = true;
+    profile.activateNewsletterToken = "";
   } else {
     res
-      .status(400)
+      .status(409)
       .json({ message: "Your newsletter subscription already activated" });
   }
 
@@ -129,9 +134,113 @@ const activateNewsleter = async (req, res) => {
     message: "Newsletter activate success",
   });
 };
+const deactivateNewslette = async (req, res) => {
+  const { id } = req.user;
+  const profile = await Profile.findOne({ owner: id });
+  if (!profile) {
+    throw HttpError(404, "User not found");
+  }
+  if (profile.newsletter === true) {
+    profile.newsletter = false;
+  } else {
+    res.status(409).json({ message: "Newsletter already deactivated" });
+  }
+  profile.save();
+  res.status(200).json({ message: "Newsletter deactivate success" });
+};
+const subscribe = async (req, res) => {
+  const { email } = req.body;
+  if (!email) {
+    throw HttpError(400, "Please enter email");
+  }
+
+  const emailExist = await Newsletter.findOne({ email });
+  if (emailExist) {
+    throw HttpError(
+      409,
+      "Subscription letter has already sent. Check your email"
+    );
+  }
+
+  const subscribeNewsletterToken = crypto.randomBytes(32).toString("hex");
+  const unsubscribeNewsletterToken = crypto.randomBytes(20).toString("hex");
+  const newsletter = await Newsletter.create({
+    email,
+    subscribeToken: subscribeNewsletterToken,
+    unsubscribeToken: unsubscribeNewsletterToken,
+  });
+  const subscribeNewsletterUrl = `${BASE_URL}/api/newsletter/subscribe/${subscribeNewsletterToken}`;
+  const unsubscribeNewsletterUrl = `${BASE_URL}/api/newsletter/unsubscribe/${unsubscribeNewsletterToken}`;
+  const message = getSubscribNewsletter(
+    newsletter?.email,
+    subscribeNewsletterUrl,
+    unsubscribeNewsletterUrl
+  );
+
+  try {
+    await sendEmail({
+      email: newsletter.email,
+      subject: "Активація підписки на розсилку новин",
+      message,
+    });
+    res.status(200).json({
+      message: `Newslatter subscription instruction was sent to your email: ${newsletter.email}!`,
+    });
+  } catch (error) {
+    return res.status(500).json(error.message);
+  }
+};
+const activateSubscription = async (req, res) => {
+  const { subscribeToken } = req.params;
+  const newsletter = await Newsletter.findOne({
+    subscribeToken,
+  });
+  if (!newsletter) {
+    throw HttpError(404, "User not found");
+  }
+  if (newsletter.subscribe === false) {
+    newsletter.subscribe = true;
+    newsletter.subscribeToken = "";
+  } else {
+    res
+      .status(409)
+      .json({ message: "Your newsletter subscription already activated" });
+  }
+  newsletter.save();
+  res.status(200).json({
+    message: "Subscription for newsletter activate success",
+  });
+};
+const unsubscribe = async (req, res) => {
+  const { unsubscribeToken } = req.params;
+  const newsletter = await Newsletter.findOne({
+    unsubscribeToken,
+  });
+  
+  if (!newsletter) {
+    throw HttpError(404, "User not found");
+  }
+  if (newsletter.subscribe === true) {
+    newsletter.subscribe = false;
+    newsletter.unsubscribeToken = "";
+  } else {
+    res
+      .status(409)
+      .json({ message: "Your already unsubscribed from newsletter" });
+  }
+  newsletter.save();
+
+  res.status(200).json({
+    message: "You unsubscribe from newsletter success",
+  });
+};
 module.exports = {
   getProfile: ctrlWrapper(getProfile),
   editProfile: ctrlWrapper(editProfile),
   newsletter: ctrlWrapper(newsletter),
   activateNewsleter: ctrlWrapper(activateNewsleter),
+  deactivateNewslette: ctrlWrapper(deactivateNewslette),
+  subscribe: ctrlWrapper(subscribe),
+  activateSubscription: ctrlWrapper(activateSubscription),
+  unsubscribe: ctrlWrapper(unsubscribe),
 };
